--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta property="og:title" content="연희포트폴리오">
   <meta property="og:type" content="portfolio">
   <meta property="og:image" content="https://szlovelygirl.blog.me/me.jpg">
-  <meta property="og:url" content="https://szlovelygirl.blog.me">
+  <meta property="og:url" content="https://lovelikehee.github.io/portfolio">
   <meta property="og:description" content="패럴럭스를 활용한 반응형 포트폴리오입니다." />
 
   <!-- Favicon-->
@@ -98,7 +98,7 @@
           <div class="menu  row clearfix">
             <div class="title">
               <span class="loopindex">01</span>
-              <a href="#">My Ability</a>
+              <a href="http://lovelikekim.dothome.co.kr/index01.html" target="_blank">My Ability</a>
               <p class="byline">Program skill</p>
               <div class="excerpt-assets nav-img02">
                 <img class="excerpt-img" src="assets/images/nav_img02.jpg" alt="nav02">
@@ -106,7 +106,7 @@
             </div>
             <div class="title">
               <span class="loopindex">02</span>
-              <a href="#">Publishing</a>
+              <a href="#page">Publishing</a>
               <p class="byline">Work experience</p>
               <div class="excerpt-assets nav-img01">
                 <img class="excerpt-img" src="assets/images/nav_img01.jpg" alt="nav01">
@@ -125,7 +125,7 @@
       </section>
     </nav>
     <!--START main-->
-    <main>
+    <main class="screen">
       <!--START sec-end-->
       <section class="sec-end">
         <div class="wrap" >
@@ -294,7 +294,7 @@
                         <input id="email" class="email" type="email" name="_replyto" placeholder="your email">
                         <textarea id="contents" type="contents" cols="40" rows="13"
                           placeholder="please write your message here."></textarea>
-                         <button type="submit" value="Send" id="submit" class="text--regular"><span>Send</span></button>
+                          <button type="submit" value="Send" id="submit" class="text--regular"><span>Send</span></button>
                       </form>
                     </div>
                   </div>
@@ -332,31 +332,6 @@
         </div>
       </section>
       <!--//END sec-end-->
-      <!--START sec4-->
-      <section class="sec4">
-        <div class="o-container">
-          <div class="c-hugeNumbers" data-module-numbers>
-            <div class="c-hugeNumbers_wrap">
-              <div class="c-hugeNumbers_main" data-numbers="wrap">
-                <div class="c-hugeNumbers_half -top"><span class="c-hugeNumbers_character">H</span><span
-                    class="c-hugeNumbers_character">E</span><span class="c-hugeNumbers_character">E</span></div>
-                <div class="c-hugeNumbers_half"><span class="c-hugeNumbers_character">H</span><span
-                    class="c-hugeNumbers_character">E</span><span class="c-hugeNumbers_character">E</span></div>
-              </div>
-              <div class="c-hugeNumbers_text" data-scroll data-scroll-speed="1.5">
-                { 8 variable weights }<br>103 birth
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="c-section_fold" data-scroll data-scroll-speed="10" data-scroll-offset="-306px"
-          data-scroll-direction="horizontal" data-scroll-position="elementTop" data-scroll-target="#customization">
-          <div class="c-section_fold_paper" data-scroll data-scroll-speed="10" data-scroll-offset="-306px"
-            data-scroll-position="elementTop" data-scroll-target="#customization"></div>
-          <div class="c-section_fold_background"></div>
-        </div>
-      </section>
-      <!--//END sec4-->
     </main>
     <!--//END main-->
   </div>
