--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                 <div class="col__item project">
                   <div class="project__count"><span class="project__count-current reveal">03</span><span
                       class="project__count-total reveal">/ 03</span></div><a class="project__image noselect"
-                    target="_blank" href="https://www.behance.net/gallery/84896693/Gym-Watch-Concept">
+                    target="_blank" href=" http://ninefive.org/auth/2019/Refrigerators/ver03/cotta_charcoal/index.html">
                     <div class="project__image-container plane plane--media"><img data-src="assets/images/work03.jpg"
                         alt="Gym Watch project cover" />
                       <video data-src="assets/video/samsung.mp4"></video>
