--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                   <div class="project__meta">
                     <h3 class="project__meta-title plane">Mega Box</h3>
                     <div class="project__meta-tags">
-                      <div class="reveal"><span>Webstandard</span><span>Responsive</span><span>Javascript</span>
+                      <div class="reveal"><span>standard</span><span>Responsive</span><span>script</span>
                       </div>
                       <div class="reveal"><span>Publishing</span><span>Development</span>
                       </div>
@@ -213,7 +213,7 @@
                   <div class="project__meta">
                     <h3 class="project__meta-title plane">Chungjungone</h3>
                     <div class="project__meta-tags">
-                      <div class="reveal"><span>mobile</span><span>HTML5/CSS3</span><span>javascript</span>
+                      <div class="reveal"><span>mobile</span><span>HTML5</span><span>script</span>
                       </div>
                       <div class="reveal"><span>Publishing</span><span>Development</span>
                       </div>
@@ -244,7 +244,7 @@
                   <div class="project__meta">
                     <h3 class="project__meta-title plane">SAMSUNG</h3>
                     <div class="project__meta-tags">
-                      <div class="reveal"><span>webstandard</span><span>HTML5/CSS3</span><span>javascript</span>
+                      <div class="reveal"><span>standard</span><span>HTML5</span><span>script</span>
                       </div>
                       <div class="reveal"><span>Publishing</span><span>Design</span>
                       </div>
