--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                     </div>
                   </div>
                   <div class="cta__reference dot">There is another way <a class="link" href="mailto:yeonhee_dev@naver.com">Say no more</a></div>
-                  <div class="cta__deco"> <span class="plane vert">nice</span><span class="plane vert">day</span></div>
+                  <div class="cta__deco"> <span class="plane vert">nice</span><span class="plane vert">day:)</span></div>
                 </div>
               </div>
               <button class="section__nav section__nav--left noselect clickable"><span
