--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- Open Graph general-->
   <meta property="og:title" content="연희포트폴리오">
   <meta property="og:type" content="portfolio">
-  <meta property="og:image" content="assets/images/image.gif">
+  <meta property="og:image" content="https://mir-s3-cdn-cf.behance.net/project_modules/disp/a912ef83691661.5e15e4185d991.gif">
   <meta property="og:url" content="https://lovelikehee.github.io/portfolio">
   <meta property="og:description" content="패럴럭스를 활용한 반응형 포트폴리오입니다." />
 
