--- a/index.html
+++ b/index.html
@@ -170,12 +170,12 @@
                   <div class="project__count"><span class="project__count-current reveal">01</span><span
                       class="project__count-total reveal">/ 03</span></div><a class="project__image noselect"
                     target="_blank" href="http://lovelikehee.dothome.co.kr/index.html">
-                    <div class="project__image-container plane plane--media"><img data-src="assets/images/work01.jpg"
+                    <div class="project__image-container plane plane--media"><img src="assets/images/work01.jpg" data-src="assets/images/work01.jpg"
                         alt="responsive cover" />
                       <video data-src="assets/video/megabox.mp4"></video>
                       <noscript><img src="assets/images/work01.jpg" alt="responsive cover" />
                         <video src="assets/video/megabox.mp4" muted="muted" autoplay="autoplay" loop="loop"
-                          preload="preload"></video>
+                          preload="auto"></video>
                       </noscript>
                     </div>
                   </a>
@@ -232,12 +232,12 @@
                   <div class="project__count"><span class="project__count-current reveal">03</span><span
                       class="project__count-total reveal">/ 03</span></div><a class="project__image noselect"
                     target="_blank" href=" http://ninefive.org/auth/2019/Refrigerators/ver03/cotta_charcoal/index.html">
-                    <div class="project__image-container plane plane--media"><img data-src="assets/images/work03.jpg"
+                    <div class="project__image-container plane plane--media"><img src="assets/images/work03.jpg" data-src="assets/images/work03.jpg"
                         alt="Gym Watch project cover" />
                       <video data-src="assets/video/samsung.mp4"></video>
                       <noscript><img src="assets/images/work03.jpg" alt="Gym Watch project cover" />
                         <video src="assets/video/samsung.mp4" muted="muted" autoplay="autoplay" loop="loop"
-                          preload="preload"></video>
+                          preload="auto"></video>
                       </noscript>
                     </div>
                   </a>
@@ -263,8 +263,8 @@
                   <div class="quote">
                     <div class="intro-text text--regular"><span class="reveal">A biased quote </span><span class="reveal">To make me look smart</span><span class="reveal">— or like a moron</span></div>
                     <div class="statue">
-                      <div class="statue__img"><img data-src="assets/images/statue.png" alt="David statue head" data-sampler="statueTexture">
-                        <noscript><img src="assets/images/statue.png" alt="David statue head"></noscript><img class="map" data-src="assets/images/statue_map.jpg" data-sampler="statueMapTexture">
+                      <div class="statue__img"><img src="assets/images/statue.png" data-src="assets/images/statue.png" alt="David statue head" data-sampler="statueTexture">
+                        <noscript><img src="assets/images/statue.png" alt="David statue head"></noscript><img class="map" src="assets/images/statue_map.jpg" data-src="assets/images/statue_map.jpg" data-sampler="statueMapTexture" alt="textureß">
                       </div>
                       <div id="canvas-statue"></div>
                       <div class="statue__text-wrap text--small"><span class="statue__text">This trendy statue head is floating around here for absolutely no reason — </span></div>
@@ -292,8 +292,7 @@
                       <form action="https://formspree.io/yeonhee_dev@naver.com" method="POST" class="form clearfix text--small">
                         <input id="name" type="text" name="name" placeholder="your name">
                         <input id="email" class="email" type="email" name="_replyto" placeholder="your email">
-                        <textarea id="contents" type="contents" cols="40" rows="13"
-                          placeholder="please write your message here."></textarea>
+                        <textarea id="contents"  dirname="contents" cols="40" rows="13" placeholder="please write your message here."></textarea>
                           <button type="submit" value="Send" id="submit" class="text--regular"><span>Send</span></button>
                       </form>
                     </div>
@@ -328,7 +327,7 @@
             <div class="contact"></div>
           </div>
           <div class="page-bg plane"></div>
-          <img id="pattern" src="assets/images/pattern.png">
+          <img id="pattern" src="assets/images/pattern.png" alt="pattern">
         </div>
       </section>
       <!--//END sec-end-->
