--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
   <meta name="description" content="패럴럭스를 활용한 반응형 포트폴리오입니다.">
   <meta name="keywords" content="퍼블리셔, 포토폴리오, 퍼블리쉬 , portfolio, Publisher, font-end, unique, webdesign ">
   <!-- Schema.org-->
-  <meta itemprop="name" content="연희포트폴리오 || Yeonhee Portfolio">
-  <meta itemprop="description" content="패럴럭스를 활용한 반응형 포트폴리오입니다.">
+  <div itemscope>
+    <meta itemprop="name"><span>"연희포트폴리오 || Yeonhee Portfolio"</span>
+    <meta itemprop="description"><span>"패럴럭스를 활용한 반응형 포트폴리오입니다."</span>
+  </div>
   <!-- Open Graph general-->
   <meta property="og:title" content="연희포트폴리오">
   <meta property="og:type" content="portfolio">
@@ -201,12 +203,12 @@
                   <div class="project__count"><span class="project__count-current reveal">02</span><span
                       class="project__count-total reveal">/ 03</span></div><a class="project__image noselect"
                     target="_blank" href="http://yeonheee.dothome.co.kr/cjw/index.html">
-                    <div class="project__image-container plane plane--media"><img data-src="assets/images/work02.jpg"
+                    <div class="project__image-container plane plane--media"><img src="assets/images/work02.jpg"  data-src="assets/images/work02.jpg"
                         alt="Whalen Financial Planning project cover" />
                       <video data-src="assets/video/cjw.mp4"></video>
                       <noscript><img src="assets/images/work02.jpg" alt="Whalen Financial Planning project cover" />
                         <video src="assets/video/cjw.mp4" muted="muted" autoplay="autoplay" loop="loop"
-                          preload="preload"></video>
+                          preload="auto"></video>
                       </noscript>
                     </div>
                   </a>
